# analyse-litterairePOO

./: exercice01_procedural.py  pyproject.toml
src/: adaptateurs.py  analyseur.py  corpus.py  documents.py  exceptions.py  exportateur.py  texte.py
tests/: donnees.csv  test_example.py
